<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/searchDialogTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search"
        android:textSize="20sp"
        android:textStyle="bold"
        android:padding="10sp"
        android:textAlignment="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/searchDialogEdit"
        android:layout_width="225sp"
        android:layout_height="wrap_content"
        android:paddingTop="5sp"
        android:drawableStart="@drawable/ic_search"
        android:hint="@string/searchName"
        app:layout_constraintTop_toBottomOf="@id/searchDialogTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/searchDialogButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:text="@string/searchName"
        app:layout_constraintTop_toBottomOf="@id/searchDialogEdit"
        app:layout_constraintStart_toEndOf="@id/searchCancelDialogButton"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/searchCancelDialogButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:text="@string/cancelButton"
        app:layout_constraintTop_toBottomOf="@id/searchDialogEdit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/searchDialogButton"/>

</androidx.constraintlayout.widget.ConstraintLayout>